@@ -2,21 +2,27 @@ From: Modestas Vainius <modax@debian.org>
 Subject: Do not set install RPATH to /usr/lib by default
 Forwarded: no
 Origin: vendor
-Last-Update: 2011-02-20
+Last-Update: 2012-02-19
 
 Use proper code in order to avoid setting INSTALL_RPATH to /usr/lib. It is
-disallowed on Debian systems and is a bad practise in general.
+disallowed on Debian systems and is a bad practise in general. We also need
+to ensure LIB_INSTALL_DIR is absolute before checking.
 
 --- a/cmake/FindPhononInternal.cmake
 +++ b/cmake/FindPhononInternal.cmake
-@@ -233,7 +233,10 @@ endif(APPLE)
+@@ -123,7 +123,15 @@ endif(APPLE)
  # RPATH directories outside the current CMAKE_BINARY_DIR and also the library 
  # install directory. Alex
  set(CMAKE_INSTALL_RPATH_USE_LINK_PATH  TRUE)
 -set(CMAKE_INSTALL_RPATH "${LIB_INSTALL_DIR}")
-+list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${LIB_INSTALL_DIR}" _isSystemLibDir)
++if (IS_ABSOLUTE "${LIB_INSTALL_DIR}")
++    set(_rpath_abs_lib_install_dir "${LIB_INSTALL_DIR}")
++else()
++    set(_rpath_abs_lib_install_dir "${CMAKE_INSTALL_PREFIX}/${LIB_INSTALL_DIR}")
++endif()
++list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${_rpath_abs_lib_install_dir}" _isSystemLibDir)
 +if("${_isSystemLibDir}" STREQUAL "-1")
-+   set(CMAKE_INSTALL_RPATH "${LIB_INSTALL_DIR}")
++   set(CMAKE_INSTALL_RPATH "${_rpath_abs_lib_install_dir}")
 +endif("${_isSystemLibDir}" STREQUAL "-1")
  
  
