@@ -11,6 +11,7 @@ phonon (4:4.6.0.0-1) UNRELEASED; urgency=low
 
   [ Modestas Vainius ]
   * Adapt findqt4_optional_x11.diff to upstream changes.
+  * Adapt no_rpath.patch to upstream changes.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 22 Jan 2012 22:51:45 +0100
 
